# aui-platform

./: .gitattributes  .gitignore  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  main.rs  optimizer.rs
src-tauri/src/ai/: mod.rs  simple_llm.rs
src-tauri/src/bridge/: application_bridge.rs  context.rs  error.rs  mod.rs  types.rs  vscode.rs  windows.rs
src/components/: ErrorNotification.tsx  PerformanceMonitor.tsx  Settings.tsx
src/components/Avatar/: Avatar.css  Avatar.tsx  EmotionEffects.tsx  emotions.ts
src/components/Chat/: ChatWindow.css  ChatWindow.tsx
src/services/: tauriService.ts
src/stores/: ChatStore.ts  settingsStore.ts
src/utils/: errorHandler.ts
